force-app/main/default/objects/Product_Summary__c/Product_Summary__c.object-meta.xml
<CustomObject>
    <label>Product Summary</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>