force-app/main/default/objects/Product_Summary__c/fields/Digital_Restorative_Change__c.field-meta.xml
<CustomField>
    <fullName>Digital_Restorative_Change__c</fullName>
    <formula>(IF(Digital_Restorative_PYTD__c &lt;&gt; 0, ((Digital_Restorative_YTD__c - Digital_Restorative_PYTD__c )/ Digital_Restorative_PYTD__c), null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Digital % Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>