force-app/main/default/objects/Product_Summary__c/fields/Digital_Restorative_FPY__c.field-meta.xml
<CustomField>
    <fullName>Digital_Restorative_FPY__c</fullName>
    <label>Digital FPY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>