force-app/main/default/objects/Product_Summary__c/fields/Implant_Units_Change__c.field-meta.xml
<CustomField>
    <fullName>Implant_Units_Change__c</fullName>
    <formula>IF(Implant_Units_PYTD__c &lt;&gt;0, ((Implant_Units_YTD__c -  Implant_Units_PYTD__c )/ Implant_Units_PYTD__c), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implant Units % Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>