force-app/main/default/objects/Product_Summary__c/fields/Implant_Units_FPY__c.field-meta.xml
<CustomField>
    <fullName>Implant_Units_FPY__c</fullName>
    <label>Implant Units FPY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>