force-app/main/default/objects/Product_Summary__c/fields/Implant_Units_YTD__c.field-meta.xml
<CustomField>
    <fullName>Implant_Units_YTD__c</fullName>
    <label>Implant Units YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>