force-app/main/default/objects/Product_Summary__c/fields/Implants_Change__c.field-meta.xml
<CustomField>
    <fullName>Implants_Change__c</fullName>
    <formula>(IF(Implants_PYTD__c &lt;&gt; 0, (( Implants_YTD__c -  Implants_PYTD__c )/ Implants_PYTD__c), null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implants % Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>