force-app/main/default/objects/Product_Summary__c/fields/Implants_YTD__c.field-meta.xml
<CustomField>
    <fullName>Implants_YTD__c</fullName>
    <label>Implants YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>