force-app/main/default/objects/Product_Summary__c/fields/Proschetic_Change__c.field-meta.xml
<CustomField>
    <fullName>Proschetic_Change__c</fullName>
    <formula>IF(Prosthetic_PYTD__c &lt;&gt;0, ((Prosthetic_YTD__c -  Prosthetic_PYTD__c )/ Prosthetic_PYTD__c), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prosthetic % Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>