force-app/main/default/objects/Product_Summary__c/fields/Regen_Change__c.field-meta.xml
<CustomField>
    <fullName>Regen_Change__c</fullName>
    <formula>IF(Regen_PYTD__c &lt;&gt; 0,(( Regen_YTD__c - Regen_PYTD__c )/ Regen_PYTD__c), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regen % Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>