force-app/main/default/objects/Product_Summary__c/fields/Regen_FPY__c.field-meta.xml
<CustomField>
    <fullName>Regen_FPY__c</fullName>
    <label>Regen FPY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>