force-app/main/default/objects/Product_Summary__c/fields/Regen_PYTD__c.field-meta.xml
<CustomField>
    <fullName>Regen_PYTD__c</fullName>
    <label>Regen PYTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>